--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <form onsubmit="getWordle(event)">
+      <input type="text" class="input" />
+      <input type="submit" />
+    </form>
     <div class="container"></div>
     <script src="script.js"></script>
   </body>
