user can now guess

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <form onsubmit="getWordle(event)">
+    <form id="form" onsubmit="getWordle(event)">
       <input type="text" class="input" />
       <input type="submit" />
     </form>
